--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=cpuMonitoring
 
-# H2 ?? ???
-spring.h2.console.enabled=true
+# MariaDB
+spring.datasource.url=jdbc:mariadb://localhost:3307/cpuusagedb?useUnicode=true&characterEncoding=utf8&serverTimeZone=Asia/Seoul
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=1234
 
-# MariaDB ?? ??? ?? ??
-#spring.datasource.secondary.url=jdbc:mariadb://localhost:3307/cpuUsageDB
-#spring.datasource.secondary.driverClassName=org.mariadb.jdbc.Driver
-#spring.datasource.secondary.username=root
-#spring.datasource.secondary.password=1234
-#spring.datasource.secondary.platform=mariadb
+# H2
+#spring.h2.console.enabled=true
